2025-06 Feature Update for Version Next (5.0.x)

--- a/incident-history/incident-history.html
+++ b/incident-history/incident-history.html
@@ -97,7 +97,7 @@
                 <!-- Collapsible Content -->
                 <div id="portfolioFilter" class="collapse">
                     <div class="portfolio-filter mt-3">
-                        <a href="#" class="btn">2025</a>
+                        <a href="#" class="btn active">2025</a>
                         <a href="2024_incident-history.html" class="btn">2024</a>
                         <a href="2023_incident-history.html" class="btn">2023</a>
                     </div>
