--- a/statistics/statistics.html
+++ b/statistics/statistics.html
@@ -119,7 +119,7 @@
 
                             <div class="chart chart-mkbf col-xl-12 col-lg-12">
                                 <div class="card card-acc h-100 py-2">
-                                    <div class="card-header py-3 d-flex align-items-center justify-content-between">
+                                    <div class="card-header-ri py-3 d-flex align-items-center justify-content-between">
                                         <h6 class="m-0 font-weight-bold text-black">
                                             <a href="./our-networks.html#mrt">
                                                 MRT Lines
@@ -137,7 +137,7 @@
 
                             <div class="chart chart-mkbf col-xl-12 col-lg-12">
                                 <div class="card card-acc h-100 py-2">
-                                    <div class="card-header py-3 d-flex align-items-center justify-content-between">
+                                    <div class="card-header-ri py-3 d-flex align-items-center justify-content-between">
                                         <h6 class="m-0 font-weight-bold text-black">
                                             <a href="./our-networks.html#lrt">
                                                 LRT Lines
@@ -170,7 +170,7 @@
 
                             <div class="chart chart-mkbf col-xl-12 col-lg-12">
                                 <div class="card card-acc h-100 py-2">
-                                    <div class="card-header py-3 d-flex align-items-center justify-content-between">
+                                    <div class="card-header-ri py-3 d-flex align-items-center justify-content-between">
                                         <h6 class="m-0 font-weight-bold text-black">
                                             <a href="./our-networks.html#mrt">
                                                 MRT Lines
@@ -188,7 +188,7 @@
 
                             <div class="chart chart-mkbf col-xl-12 col-lg-12">
                                 <div class="card card-acc h-100 py-2">
-                                    <div class="card-header py-3 d-flex align-items-center justify-content-between">
+                                    <div class="card-header-ri py-3 d-flex align-items-center justify-content-between">
                                         <h6 class="m-0 font-weight-bold text-black">
                                             <a href="../our-networks.html#lrt">
                                                 LRT Lines
