2025-06 Feature Update for Version Next (5.0.x)

--- a/incident-history/incident-history.html
+++ b/incident-history/incident-history.html
@@ -98,8 +98,8 @@
                 <div id="portfolioFilter" class="collapse">
                     <div class="portfolio-filter mt-3">
                         <a href="#" class="btn active">2025</a>
-                        <a href="2024_incident-history.html" class="btn">2024</a>
-                        <a href="2023_incident-history.html" class="btn">2023</a>
+                        <a href="2024_incident-history.html" class="btn tab">2024</a>
+                        <a href="2023_incident-history.html" class="btn tab">2023</a>
                     </div>
                 </div>
             </div>
@@ -112,33 +112,33 @@
         <div class="row row-do">
             <!-- Month Tabs -->
             <div class="col-12">
-                <ul class="nav nav-tabs" id="busTab" role="tablist">
-                    <li class="nav-item-ic" role="presentation">
+                <ul class="nav nav-tabs" id="ihTab" role="tablist">
+                    <li class="nav-item-ic" role="history">
                         <button class="nav-link active" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1"
                             type="button" role="tab" aria-controls="tab1" aria-selected="true">May</button>
                     </li>
-                    <li class="nav-item-ic" role="presentation">
+                    <li class="nav-item-ic" role="history">
                         <button class="nav-link" id="tab2-tab" data-bs-toggle="tab" data-bs-target="#tab2" type="button"
                             role="tab" aria-controls="tab2" aria-selected="false">April</button>
                     </li>
-                    <li class="nav-item-ic" role="presentation">
+                    <li class="nav-item-ic" role="history">
                         <button class="nav-link" id="tab3-tab" data-bs-toggle="tab" data-bs-target="#tab3" type="button"
                             role="tab" aria-controls="tab3" aria-selected="false">March</button>
                     </li>
 
-                    <li class="nav-item-ic" role="presentation">
+                    <li class="nav-item-ic" role="history">
                         <button class="nav-link" id="tab4-tab" data-bs-toggle="tab" data-bs-target="#tab4" type="button"
                             role="tab" aria-controls="tab4" aria-selected="false">February</button>
                     </li>
 
-                    <li class="nav-item-ic" role="presentation">
+                    <li class="nav-item-ic" role="history">
                         <button class="nav-link" id="tab5-tab" data-bs-toggle="tab" data-bs-target="#tab5" type="button"
                             role="tab" aria-controls="tab5" aria-selected="false">January</button>
                     </li>
 
                 </ul>
 
-                <div class="tab-content" id="busTabContent">
+                <div class="tab-content" id="ihTabContent">
 
                     <!-- May -->
                     <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
