--- a/statistics/statistics.html
+++ b/statistics/statistics.html
@@ -127,7 +127,7 @@
                                         </h6>
                                     </div>
                                     <!-- Card Body -->
-                                    <div class="card-body card-body-acc">
+                                    <div class="card-body-stats card-body-acc">
                                         <div class="chart-area">
                                             <canvas id="mkbf-smrt-mrt"></canvas>
                                         </div>
@@ -145,7 +145,7 @@
                                         </h6>
                                     </div>
                                     <!-- Card Body -->
-                                    <div class="card-body card-body-acc">
+                                    <div class="card-body-stats card-body-acc">
                                         <div class="chart-area">
                                             <canvas id="mkbf-smrt-lrt"></canvas>
                                         </div>
@@ -178,7 +178,7 @@
                                         </h6>
                                     </div>
                                     <!-- Card Body -->
-                                    <div class="card-body card-body-acc">
+                                    <div class="card-body-stats card-body-acc">
                                         <div class="chart-area">
                                             <canvas id="mkbf-sbst-mrt"></canvas>
                                         </div>
@@ -196,7 +196,7 @@
                                         </h6>
                                     </div>
                                     <!-- Card Body -->
-                                    <div class="card-body card-body-acc">
+                                    <div class="card-body-stats card-body-acc">
                                         <div class="chart-area">
                                             <canvas id="mkbf-sbst-lrt"></canvas>
                                         </div>
