2025-06 Feature Update for Version Next (5.0.x)

--- a/incident-history/2024_incident-history.html
+++ b/incident-history/2024_incident-history.html
@@ -59,7 +59,7 @@
 
     <!-- ============================================= Hero Section ============================================= -->
     <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-about"
-        style="background-image: url(../img/bg-img/hero.png); height: 100vh;">
+        style="background-image: url(../img/bg-img/smrt-eng.png); height: 100vh;">
         <div class="wbnrfz_details_blog">
             <div class="container">
                 <div class="portfolio-controls d-flex justify-content-between align-items-center">
@@ -118,14 +118,14 @@
                             type="button" role="tab" aria-controls="tab1" aria-selected="true">December</button>
                     </li>
                     <li class="nav-item-ic" role="history">
-                        <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button"
-                            role="tab" aria-controls="tab1" aria-selected="true">November</button>
+                        <button class="nav-link" id="tab2-tab" data-bs-toggle="tab" data-bs-target="#tab2" type="button"
+                            role="tab" aria-controls="tab2" aria-selected="true">November</button>
                     </li>
                     <li class="nav-item-ic" role="history">
-                        <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button"
-                            role="tab" aria-controls="tab1" aria-selected="true">October</button>
+                        <button class="nav-link" id="tab3-tab" data-bs-toggle="tab" data-bs-target="#tab3" type="button"
+                            role="tab" aria-controls="tab3" aria-selected="true">October</button>
                     </li>
-                    <li class="nav-item-ic" role="history">
+                    <!-- <li class="nav-item-ic" role="history">
                         <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button"
                             role="tab" aria-controls="tab1" aria-selected="true">September</button>
                     </li>
@@ -162,7 +162,7 @@
                     <li class="nav-item-ic" role="history">
                         <button class="nav-link" id="tab5-tab" data-bs-toggle="tab" data-bs-target="#tab5" type="button"
                             role="tab" aria-controls="tab5" aria-selected="false">January</button>
-                    </li>
+                    </li> -->
 
                 </ul>
 
@@ -175,7 +175,7 @@
                                 <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 29/12/2024
                             </div>
                             <div class="card-body text-primary" style="position: relative;">
-                                <img src="../img/caplets/TELCap.png" alt="CCL" width="55px"
+                                <img src="../img/caplets/TELCap.png" alt="TEL" width="55px"
                                     style="padding-bottom: 1em;">
                                 <a href="https://x.com/SMRT_Singapore/status/1873366778963022111"
                                     style="position: absolute; top: -34px; right: 16px;">
@@ -196,7 +196,7 @@
                                 <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 27/12/2024
                             </div>
                             <div class="card-body text-primary" style="position: relative;">
-                                <img src="../img/caplets/TELCap.png" alt="NSL" width="55px"
+                                <img src="../img/caplets/TELCap.png" alt="TEL" width="55px"
                                     style="padding-bottom: 1em;">
                                 <a href="https://x.com/SMRT_Singapore/status/1872408512502083687"
                                     style="position: absolute; top: -34px; right: 16px;">
@@ -212,13 +212,182 @@
 
                             </div>
                         </div>
+
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 23/12/2024
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/CCLCap.png" alt="CCL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1871054828673421706"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    Due to a signaling fault, please expect additional travelling time of 15 mins
+                                    between #BotanicGardens and
+                                    #PayaLebar. Free Regular bus services are available between #BotanicGardens and
+                                    #PayaLebar.
+                                </p>
+
+                            </div>
+                        </div>
+
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 19/12/2024
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/TELCap.png" alt="TEL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1869558003860742549"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    Due to a signal fault, trains are moving slower between Bayshore and Woodlands North
+                                    in both directions.
+                                    Additional travelling time of 10 minutes expected.
+                                </p>
+
+                            </div>
+                        </div>
+
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 17/12/2024
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/EWLCap.png" alt="EWL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1868983745795199257"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    Due to a track fault, pls add 15mins train travel time between #JurongEast and
+                                    #GulCircle. Free regular bus
+                                    service is available between Gul Circle and Jurong East.
+                                </p>
+
+                            </div>
+                        </div>
+
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 14/12/2024
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/CCLCap.png" alt="CCL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1867884520252575930"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    UPDATE: Additional 30mins train travel time between #Promenade and #Serangoon due to
+                                    a train fault. Free
+                                    regular bus service are available between #Promenade and #Serangoon.
+                                </p>
+
+                            </div>
+                        </div>
+
+
                     </div>
 
+                    <!-- Nov -->
+                    <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
+                        <div class="card-in">
+                            <div class="card-body text-primary" style="position: relative;">
+                                <p class="card-text-ri" style="font-size: 17px;">
+                                    No Incidents Reported
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Oct -->
+                    <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 22/10/2024
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/BPCap.png" alt="BP" width="55px" style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1848664662616998235"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    Due to a Train fault, normal train service is affected. Shuttle train service is
+                                    available between
+                                    #ChoaChuKang and #BukitPanjang. Train service between #BukitPanjang and #Petir via
+                                    Service A and #Senja via
+                                    Service B is not affected.
+                                </p>
+
+                            </div>
+                        </div>
+
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 10/10/2024
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/EWLCap.png" alt="EWL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1844234217955459472"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    Due to a train fault, pls add 25mins train travel time from #OutramPark to
+                                    #Queenstown towards #JooKoon.
+                                </p>
+
+                            </div>
+                        </div>
+
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 01/10/2024
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/TELCap.png" alt="TEL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1841041695867342953"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    04:56 PM - Due to a train fault, trains are moving slower from Woodlands North
+                                    towards Lentor. Additional travelling time of 10min.
+                                </p>
+
+                            </div>
+                        </div>
+
+                    </div>
 
                 </div>
-
             </div>
-        </div>
         </div>
 
 
