--- a/mrt-lines/nsl.html
+++ b/mrt-lines/nsl.html
@@ -66,8 +66,16 @@
             <div class="col-lg-12">
               <div class="main-title">
                 <nav aria-label="breadcrumb">
-                  <span style="color: #ea1c2d; cursor: pointer;" title="Click me to hear one of the NSL Chimes!"
-                    onclick="playAudio()">SMRT Trains</span>
+                  <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="../our-networks.html">
+                        Networks</a>
+                    </li>
+                    <li class="breadcrumb-item" onclick="playAudio()"><a href="#" style="color: #ea1c2d; cursor: pointer;"
+                      title="Click me to hear one of the NSL Chimes!" >
+                        SMRT Trains
+                      </a>
+                    </li>
+                  </ol>
                 </nav>
                 <h1 class="brc">North-South Line</h1>
               </div>
@@ -112,7 +120,7 @@
 
 
   <section class="about-me-summ clearfix">
-    <div class="wbnrfz_details wow fadeInUp" data-wow-delay="300ms">
+    <div class="wbnrfz_details">
       <div class="container container-xxl">
 
         <div class="row justify-content-center">
@@ -120,7 +128,7 @@
             <div class="details_info">
               <div class="row justify-content-center">
                 <div class="col-lg-12">
-                  <div class="info justify-content-center">
+                  <div class="info justify-content-center wow fadeInUp" data-wow-delay="300ms">
                     <p style="text-align: center;">Our extensive MRT system today begun
                       with only five
                       stations on the North-South Line (NSL) connecting Yio Chu Kang to Toa Payoh in 1987. Though it
