--- a/mrt-lines/bp.html
+++ b/mrt-lines/bp.html
@@ -56,7 +56,7 @@
   </header>
 
 
-      <!-- ============================================= Hero Section ============================================= -->
+  <!-- ============================================= Hero Section ============================================= -->
   <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-about"
     style="background-image: url(../img/networks/bpA.png); height: 100vh;">
     <div class="wbnrfz_details_blog">
@@ -67,8 +67,16 @@
             <div class="col-lg-12">
               <div class="main-title">
                 <nav aria-label="breadcrumb">
-                  <span style="color: #ea1c2d; cursor: pointer;" title="Click me to hear one of the NSL Chimes!"
-                    onclick="playAudio()">SMRT Trains</span>
+                  <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="../our-networks.html">
+                        Networks</a>
+                    </li>
+                    <li class="breadcrumb-item" onclick="playAudio()"><a href="#"
+                        style="color: #ea1c2d; cursor: pointer;" title="Click me to hear one of the BPLRT Chimes!">
+                        SMRT Trains
+                      </a>
+                    </li>
+                  </ol>
                 </nav>
                 <h1 class="brc">Bukit Panjang LRT</h1>
               </div>
@@ -89,31 +97,31 @@
         </div>
         <!-- Collapsible Content -->
         <div id="portfolioFilter" class="collapse">
-        <div class="details_catagory_wrap">
-          <div class="col-sm-3 single_catagory ">
-            <span>Opened</span>
-            <h4>6 November 1999<br>(All stations)</h4>
-          </div>
-          <div class="col-sm-3 single_catagory">
-            <span>Length of Line</span>
-            <h4>8 km <br>(with 13 stations)</h4>
-          </div>
+          <div class="details_catagory_wrap">
+            <div class="col-sm-3 single_catagory ">
+              <span>Opened</span>
+              <h4>6 November 1999<br>(All stations)</h4>
+            </div>
+            <div class="col-sm-3 single_catagory">
+              <span>Length of Line</span>
+              <h4>8 km <br>(with 13 stations)</h4>
+            </div>
 
-          <div class="col-sm-3 single_catagory">
-            <span>Operated By</span>
-            <img class="logo-operator" src="../img/core-img/stl.png" id="ops-smrt" alt="smrt" width="170px">
-          </div>
+            <div class="col-sm-3 single_catagory">
+              <span>Operated By</span>
+              <img class="logo-operator" src="../img/core-img/stl.png" id="ops-smrt" alt="smrt" width="170px">
+            </div>
 
-        </div>
+          </div>
         </div>
       </div>
     </div>
     <div style="background-color: #758374; width: 100%; height: 10px;"></div>
   </section>
 
-  
+
   <section class="about-me-summ section-padding-80-0 clearfix">
-    <div class="wbnrfz_details wow fadeInUp" data-wow-delay="300ms">
+    <div class="wbnrfz_details">
       <div class="container container-xxl">
 
         <div class="row justify-content-center">
@@ -121,7 +129,7 @@
             <div class="details_info">
               <div class="row justify-content-center">
                 <div class="col-lg-12">
-                  <div class="info justify-content-center">
+                  <div class="info justify-content-center wow fadeInUp" data-wow-delay="300ms">
                     <p style="text-align: center;">The Bukit Panjang Light Rapid Transit
                       (BPLRT) was launched as the first light rail line in Singapore in 1999.
                       LRT in Bukit Panjang
