--- a/mrt-lines/ccl.html
+++ b/mrt-lines/ccl.html
@@ -55,7 +55,7 @@
     </nav>
   </header>
 
-    <!-- ============================================= Hero Section ============================================= -->
+  <!-- ============================================= Hero Section ============================================= -->
   <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-about"
     style="background-image: url(../img/networks/cclA.png); height: 100vh;">
     <div class="wbnrfz_details_blog">
@@ -66,10 +66,19 @@
             <div class="col-lg-12">
               <div class="main-title">
                 <nav aria-label="breadcrumb">
-                  <span style="color: #ea1c2d; cursor: pointer;" title="Click me to hear one of the NSL Chimes!"
-                    onclick="playAudio()">SMRT Trains</span>
-                </nav>
-                <h1 class="brc">Circle Line</h1>
+                  <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                      <li class="breadcrumb-item"><a href="../our-networks.html">
+                          Networks</a>
+                      </li>
+                      <li class="breadcrumb-item" onclick="playAudio()"><a href="#"
+                          style="color: #ea1c2d; cursor: pointer;" title="Click me to hear one of the CCL Chimes!">
+                          SMRT Trains
+                        </a>
+                      </li>
+                    </ol>
+                  </nav>
+                  <h1 class="brc">Circle Line</h1>
               </div>
             </div>
           </div>
@@ -88,22 +97,22 @@
         </div>
         <!-- Collapsible Content -->
         <div id="portfolioFilter" class="collapse">
-        <div class="details_catagory_wrap">
-          <div class="col-sm-3 single_catagory ">
-            <span>Opened</span>
-            <h4>28 May 2009<br>(in Phases)</h4>
-          </div>
-          <div class="col-sm-3 single_catagory">
-            <span>Length of Line</span>
-            <h4>35.7 km <br>(with 30 stations)</h4>
-          </div>
+          <div class="details_catagory_wrap">
+            <div class="col-sm-3 single_catagory ">
+              <span>Opened</span>
+              <h4>28 May 2009<br>(in Phases)</h4>
+            </div>
+            <div class="col-sm-3 single_catagory">
+              <span>Length of Line</span>
+              <h4>35.7 km <br>(with 30 stations)</h4>
+            </div>
 
-          <div class="col-sm-3 single_catagory">
-            <span>Operated By</span>
-            <img class="logo-operator" src="../img/core-img/stl.png" id="ops-smrt" alt="smrt" width="170px">
-          </div>
+            <div class="col-sm-3 single_catagory">
+              <span>Operated By</span>
+              <img class="logo-operator" src="../img/core-img/stl.png" id="ops-smrt" alt="smrt" width="170px">
+            </div>
 
-        </div>
+          </div>
         </div>
       </div>
     </div>
@@ -112,7 +121,7 @@
 
 
   <section class="about-me-summ section-padding-80-0 clearfix">
-    <div class="wbnrfz_details wow fadeInUp" data-wow-delay="300ms">
+    <div class="wbnrfz_details">
       <div class="container container-xxl">
 
         <div class="row justify-content-center">
@@ -120,7 +129,7 @@
             <div class="details_info">
               <div class="row justify-content-center">
                 <div class="col-lg-12">
-                  <div class="info justify-content-center">
+                  <div class="info justify-content-center wow fadeInUp" data-wow-delay="300ms">
                     <p style="text-align: center;">Building the Circle Line (CCL) was a
                       feat that required innovations in design, engineering and construction. It took place in
                       challenging soil
