--- a/our-networks.html
+++ b/our-networks.html
@@ -56,7 +56,7 @@
 
     <!-- ============================================= Hero Section ============================================= -->
     <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-about"
-        style="background-image: url(../img/bg-img/hero.png); height: 100vh;">
+        style="background-image: url(img/bg-img/hero.png); height: 100vh;">
         <div class="wbnrfz_details_blog">
             <div class="container">
                 <div class="portfolio-controls d-flex justify-content-between align-items-center">
