2025-06 Feature Update for Version Next (5.0.x)

--- a/incident-history/2024_incident-history.html
+++ b/incident-history/2024_incident-history.html
@@ -73,12 +73,12 @@
                                                 Home</a>
                                         </li>
                                         <li class="breadcrumb-item"><a
-                                                href="https://nurafianzulkifli.com/works-by-nrfz.html">
+                                                href="#">
                                                 Incident History
                                             </a>
                                         </li>
                                         <li class="breadcrumb-item active"><a
-                                                href="https://nurafianzulkifli.com/works-by-nrfz.html">
+                                                href="#">
                                                 2024
                                             </a>
                                         </li>
