2025-06 Feature Update for Version Next (5.0.x)

--- a/our-networks.html
+++ b/our-networks.html
@@ -42,7 +42,7 @@
         </label>
 
         <nav class="navbar navbar-mobile">
-            <a href="#" class="nav-item">Home</a>
+            <a href="index.html" class="nav-item">Home</a>
             <a href="statistics/statistics.html" class="nav-item">Statistics</a>
             <a href="incident-history/incident-history.html" class="nav-item">Incident History</a>
             <a href="our-networks.html" class="nav-item active">Networks</a>
