--- a/incident-history/incident-history.html
+++ b/incident-history/incident-history.html
@@ -59,7 +59,7 @@
 
     <!-- ============================================= Hero Section ============================================= -->
     <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-about"
-        style="background-image: url(https://media.asiaone.com/sites/default/files/styles/article_top_image/public/original_images/Oct2024/EWLdisruptionrepairs_asiaone.jpg?itok=zCqF-8Z6); height: 100vh;">
+        style="background-image: url(../img/bg-img/og_img.png); height: 100vh;">
         <div class="wbnrfz_details_blog">
             <div class="container">
                 <div class="portfolio-controls d-flex justify-content-between align-items-center">
@@ -72,13 +72,11 @@
                                         <li class="breadcrumb-item"><a href="../index.html">
                                                 Home</a>
                                         </li>
-                                        <li class="breadcrumb-item"><a
-                                                href="#">
+                                        <li class="breadcrumb-item"><a href="#">
                                                 Incident History
                                             </a>
                                         </li>
-                                        <li class="breadcrumb-item active"><a
-                                                href="#">
+                                        <li class="breadcrumb-item active"><a href="#">
                                                 2025
                                             </a>
                                         </li>
