--- a/statistics/statistics.html
+++ b/statistics/statistics.html
@@ -56,7 +56,7 @@
 
     <!-- ============================================= Hero Section ============================================= -->
     <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-about"
-        style="background-image: url(https://upload.wikimedia.org/wikipedia/commons/7/71/Alstom_Movia_R151_Rolling_Stock.jpg); height: 100vh;">
+        style="background-image: url(../img/bg-img/og_img.png); height: 100vh;">
         <div class="wbnrfz_details_blog">
             <div class="container">
                 <div class="portfolio-controls d-flex justify-content-between align-items-center">
